mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2018 Git.training
-	adding changes before rabasing conflicts
+silly changes
 -->
 
 <head>
@@ -19,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			lkahdf askljhasdfgoiu
 		</p>
 	</main>
 	<footer class="container">
