--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@ silly changes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git traingin 2014</p>
 	</footer>
 </body>
 </html>
