--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ silly changes
 -->
 
 <head>
-	<title>A respectfull Website</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ silly changes
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+		Adding imporntant content
 		<p>
 			lkahdf askljhasdfgoiu
 		</p>
