--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ silly changes
 -->
 
 <head>
-	<title>Updating Title for Stash Branch Example</title>
+	<title>Updating Title for tag example Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
